--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//keycloak starter
+	implementation 'org.keycloak:keycloak-spring-boot-starter:6.0.1'
 }
+
